[gd_scene load_steps=22 format=3 uid="uid://rif160syjhs3"]

[ext_resource type="Script" uid="uid://dmv4ptgcplrwr" path="res://scenes/component/ability_upgrade_card.gd" id="1_hedcm"]
[ext_resource type="PackedScene" uid="uid://berykcpudlkdw" path="res://scenes/component/random_audio_stream_player_component.tscn" id="2_ekil8"]
[ext_resource type="AudioStream" uid="uid://c6iel3dtcrnxu" path="res://sounds/switch1.ogg" id="3_oftpx"]
[ext_resource type="AudioStream" uid="uid://b6vfxq753kt3n" path="res://sounds/switch2.ogg" id="4_1fadt"]
[ext_resource type="AudioStream" uid="uid://b1j3fcqkfpnpn" path="res://sounds/switch3.ogg" id="5_d28uw"]
[ext_resource type="AudioStream" uid="uid://doaxmkjl6wjc0" path="res://sounds/switch4.ogg" id="6_jc6b0"]
[ext_resource type="AudioStream" uid="uid://0h2wwkc1y1w1" path="res://sounds/switch5.ogg" id="7_2v8an"]
[ext_resource type="AudioStream" uid="uid://c7smwq37jsbyj" path="res://sounds/switch6.ogg" id="8_u2dbf"]
[ext_resource type="AudioStream" uid="uid://cbrxq4hv415wt" path="res://sounds/switch7.ogg" id="9_hxae3"]
[ext_resource type="AudioStream" uid="uid://bpfarkuqxb5ll" path="res://sounds/switch8.ogg" id="10_gbr53"]
[ext_resource type="AudioStream" uid="uid://b50puob23ic7y" path="res://sounds/switch9.ogg" id="11_tkgtx"]
[ext_resource type="AudioStream" uid="uid://0bn0s0f1amj8" path="res://sounds/switch10.ogg" id="12_ldqmt"]
[ext_resource type="Texture2D" uid="uid://cg8xs3f4fg34r" path="res://scenes/ability/sword_ability/sword.png" id="13_bua8b"]

[sub_resource type="Animation" id="Animation_45jv1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fc54f"]
resource_name = "discard"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_e7to5"]
resource_name = "in"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_e4ham"]
resource_name = "selected"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.4, 1.4), Vector2(2.08165e-12, 2.08165e-12)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ClickPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r5ku6"]
_data = {
&"RESET": SubResource("Animation_45jv1"),
&"discard": SubResource("Animation_fc54f"),
&"in": SubResource("Animation_e7to5"),
&"selected": SubResource("Animation_e4ham")
}

[sub_resource type="Animation" id="Animation_e8iv0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_6lo74"]
resource_name = "hover"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HoverPlayerComponent")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_random"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ebh0f"]
_data = {
&"RESET": SubResource("Animation_e8iv0"),
&"hover": SubResource("Animation_6lo74")
}

[node name="AbilityUpgradeCard" type="PanelContainer" groups=["upgrade_card"]]
custom_minimum_size = Vector2(120, 160)
offset_right = 120.0
offset_bottom = 160.0
pivot_offset = Vector2(60, 80)
mouse_default_cursor_shape = 2
script = ExtResource("1_hedcm")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r5ku6")
}

[node name="HoverAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ebh0f")
}

[node name="HoverPlayerComponent" parent="." instance=ExtResource("2_ekil8")]
volume_db = -20.0
streams = Array[AudioStream]([ExtResource("3_oftpx"), ExtResource("4_1fadt"), ExtResource("5_d28uw"), ExtResource("6_jc6b0"), ExtResource("7_2v8an"), ExtResource("8_u2dbf"), ExtResource("9_hxae3"), ExtResource("10_gbr53"), ExtResource("11_tkgtx"), ExtResource("12_ldqmt")])

[node name="ClickPlayerComponent" parent="." instance=ExtResource("2_ekil8")]
streams = Array[AudioStream]([ExtResource("3_oftpx"), ExtResource("4_1fadt"), ExtResource("5_d28uw"), ExtResource("6_jc6b0"), ExtResource("7_2v8an"), ExtResource("8_u2dbf"), ExtResource("9_hxae3"), ExtResource("10_gbr53"), ExtResource("11_tkgtx"), ExtResource("12_ldqmt")])

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="PanelLabel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"AlternatePanelContainer"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/PanelLabel"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"HeaderMedium"
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 1
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 26
text = "Test Title"
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 8
theme_override_constants/shadow_outline_size = 1
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 16
text = "Test Description"
vertical_alignment = 2
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="QuantityLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_colors/font_outline_color = Color(0.14902, 0.168627, 0.266667, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 6
theme_override_constants/shadow_outline_size = 0
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 14
vertical_alignment = 2

[node name="UpgradeImage" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 2
texture = ExtResource("13_bua8b")
stretch_mode = 3
